# buff-code

./: .README.md.swp  .gitignore  Dockerfile  README.md  System_Tests.md  buff.bash  client_secrets.json  index.html  map.npy  slopedMap.npy  startup.sh  visionTags.json
.catkin_tools/: README
.catkin_tools/profiles/debug/: build.yaml  config.yaml  devel_collisions.txt
.catkin_tools/profiles/default/: devel_collisions.txt
buffpy/: README.md  buff  buff.bash  khadas_info.md  package.xml  setup.py
buffpy/config/data/: buff_view.perspective  buffnet-settings.yaml  camera_settings.yaml  config.rviz  deadreckon_settings.yaml  default_camera.yaml  default_deadreckon.yaml  default_serial.yaml  gdrive.yaml  luxonis_settings.yaml  model_settings.yaml  serial_settings.yaml  tracker_demo_config.yaml  tracker_settings.yaml
buffpy/config/install/: dependencies.txt  docker_requirements.txt  python3_requirements.txt  ros_dependencies.txt  ros_python_requirements.txt
buffpy/config/lib/: bouncing_ball.yaml  buffnet-settings.yaml  debug_live.yaml  gdrive.yaml  live.yaml  sample.yaml
buffpy/config/robots/: ;q  infantry.yaml  self.yaml  (+2 more)
buffpy/launch/: main.launch
buffpy/lib/: buffvision.py  gdrive_handler.py
buffpy/models/: common.py
buffpy/scripts/: buff_entrypoint.sh  buffbot.service  buffpy  buffpy-deprecated  build_khadas_img.bash  camera.py  docker_image_generator.bash  effdet_trainer.bash  install.bash  install_buffpy.bash  install_docker.bash  install_macos.bash  install_realsense_source.bash  install_ros.bash  install_ros2.bash  install_ros_melodic.bash  install_ros_source.bash  install_sublime.bash  install_tytools.bash  install_wsl_gpu_drivers.bash  onnx2blob.py  openvino_setup.bash  pt2blob.bash  purge.bash  robot_setup.bash  run  run-deprecated  setup_yolov5.bash  startup.bash  wsl_gpu_drivers.bash  yolov5_setup.bash
buffpy/src/: buffpy_tools.py  build_profile.py  cli.py  reset_teensy.py  robot_description.py  robot_installer.py  robot_spawner.py  tools.py
buffpy/tests/: build_test.py  run_test.py
buffpy/util/: augmentations.py  datasets.py
config/: dependencies.txt  gdrive_config.yaml
config/install/: dependencies.txt  python3_requirements.txt  ros_dependencies.txt  ros_python_deps.txt  x86_64-dependencies.txt
config/lib/: buffnet-settings.yaml  camera_debug.yaml  debug_live.yaml  default_camera.yaml  gdrive.yaml  gdrive_config.yaml  i_thresholder.yaml  live.yaml  mds_debug_live.yaml  mds_det.yaml  mds_hsv_blue.yaml  mds_hsv_red.yaml  mds_pipeline.yaml  mds_thresholder.yaml  ml.yaml  ml_debug.yaml  nn_hsv_red.yaml  sample.yaml
containers/: README.md  docker-compose.yaml  log.txt
containers/arm-l4t-base/: Dockerfile
containers/base/: .dockerignore  Dockerfile
containers/dev/: Dockerfile
containers/x86_64-ubuntu-base/: Dockerfile
cu-robotics@10.201.1.176/: Cargo.toml
data/: B80F4876-55FB-43BE-AFDC-1797AF76E8EE.heic
dev/: Untitled.ipynb  cv-data-science-intro.ipynb  mds_vision_model.ipynb
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
docs/: flexcanrequirements.txt  install.md  setup_ubuntu18_ova.md  ssh_to_jetson.md  teensy_setup.md  windowsSHHKey.md  windows_setup.md
documentation/buff_rust/: crates.js  search-index.js  settings.html  source-files.js
logs/buff_ros/: build.install.000.log.stderr
scripts/: buff_entrypoint.sh  install.bash  install_docker.bash  install_jetson_inference.bash  install_macos.bash  install_ros_melodic.bash  install_sublime.bash  main.py
src/: README.md
src/buff_ros/: CMakeLists.txt  package.xml
src/buff_rust/: Cargo.toml  README.md
src/buff_rust/src/: buff_hid.rs  device.rs  lib.rs  localization.rs  main.rs  remote_control.rs  swerve_controller.rs  transforms.rs
src/buff_rust/src/buff_rust/: buff_utils.rs  mod.rs  test.rs
src/buff_rust/src/buff_util/: buff_utils.rs  test.rs
src/buff_rust/src/device_manager/: device.rs  device_node.rs  devices.rs  mod.rs  tests.rs
src/buff_rust/src/hid/: buff_hid.rs  device.rs  mod.rs
src/buff_rust/src/localization/: data_structures.rs  estimator.rs  estimator_node.rs  estimators.rs  mod.rs  node.rs  quadtree.rs  swerve.rs  tests.rs
src/buff_rust/src/locomotion/: controllers.rs  locomotion.rs  locomotion_node.rs  mod.rs  node.rs  swerve_controller.rs  test.rs  tests.rs
src/buff_rust/src/teensy_comms/: buff_hid.rs  comms_node.rs  data_structures.rs  device.rs  mod.rs  node.rs  test.rs  tests.rs
src/buff_rust/src/tests/: hid_test.rs  mod.rs
src/buff_rust/src/utilities/: buffers.rs  data_structures.rs  loaders.rs  mod.rs  test.rs
src/buff_rust/src/vision/: image_fps.rs
src/buff_rust/tests/: buff_util_test.rs  live_chassis_test.rs  live_comms_test.rs  live_control_test.rs  live_estimator_test.rs  live_motor_test.rs  logic_control_test.rs  teensy_comms_test.rs
src/buffnet/: CMakeLists.txt  README.md  build.sh
src/buffnet/src/: buffnet.cpp
src/crosshair/: CMakeLists.txt  package.xml
src/crosshair/lib/models/: common.py  experimental.py
src/crosshair/lib/utils/: augmentations.py  general.py  loss.py  plots.py  torch_utils.py
src/crosshair/scripts/: buffnet.py  buffnet_old.py  image_generator.py  interactive_thresholder.py  luxnet.py  mds_detector.py  ml_detector.py  ml_requirements.txt  tracker_demo_detector.py  trainer.py  xml2txt.py
src/crosshair/src/: depthai-depth.cpp
src/crosshair/weights/: buffdata.yaml
src/cv_benchmarking/: luxonis_depth_colormap.py  luxonis_spatial_object_tracker.py  mobilenet-torch.py
src/echo/: CMakeLists.txt  Cargo.toml  package.xml
src/firmware/: Makefile  README.md  platformio.ini
src/hunter/: CMakeLists.txt  package.xml
src/omega/: CMakeLists.txt
src/perception_tools/: BallisticsP.py  README.md  dataset.txt  demo_ros_stream.py  find-armor-plate.py  model_convert.py  model_trainer.py
src/rknn_buffnet/: CMakeLists.txt  README.md
src/system_identification/: README.md  camera_calibration.py  motor_identification.py
src/tech/: CMakeLists.txt
src/template/: status.txt
src/wrecker/: CMakeLists.txt  package.xml  platformio.ini
(+710 files in other folders)
