[package]
name = "buff_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = "0.9"
hidapi = "1.4.1"
urdf-rs = "0.6.5"
yaml-rust = "0.4"
nalgebra = "0.31.1"
rosrust_msg = "0.1"
env_logger = "0.9.0"

[[bin]]
name = "comms_node"
path = "src/teensy_comms/node.rs"

[[bin]]
name = "controller_node"
path = "src/locomotion/node.rs"

[[bin]]
name = "device_node"
path = "src/device_manager/node.rs"