[package]
name = "buff_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# eye = "0.4.1"
rand = "0.8.5"
rosrust = "0.9"
hidapi = "2.0.2"
# glium = "0.31.0"
yaml-rust = "0.4"
# nalgebra = "0.31.1"
rosrust_msg = "0.1"
env_logger = "0.9.0"

[[bin]]
name = "comms_node"
path = "src/teensy_comms/comms_node.rs"

[[bin]]
name = "locomotion_node"
path = "src/locomotion/locomotion_node.rs"

[[bin]]
name = "estimator_node"
path = "src/localization/estimator_node.rs"