[package]
name = "buff_rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hidapi = "2.2.0"
image = "0.24.5"
chrono = "0.4.23"
yaml-rust = "0.4.5"

rosrust = "0.9.10"
env_logger = "0.9.3"
rosrust_msg = "0.1.6"


[[bin]]
name = "comms_node"
path = "src/teensy_comms/comms_node.rs"

